<resources>
    <string name="app_name">whack-a-mole</string>
    <string name="game_services_project_id">832878866251</string>
    <string name="title">Whack-A-Mole!</string>
    <string name="begin">Whack!</string>
    <string name="stats">Stats</string>
    <string name="username_banner">Enter Username:</string>
    <string name="default_entry">Hello, my name is..</string>
    <string name="default_score">Score:</string>
    <string name="current_user">User:</string>
    <string name="game_over">Game Over!</string>
    <string name="final_score">Final Score: by User</string>
    <string name="leaders">Top Scores:</string>
    <string name="home">Go Home</string>
    <string name="high">HI:</string>
    <string name="high_score">High Score</string>


</resources>