<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/game_background"
    tools:context=".Activities.gameActivity">

    <TextView
        android:id="@+id/hiscore"
        android:layout_width="163dp"
        android:layout_height="60dp"
        android:layout_marginStart="0sp"
        android:layout_marginTop="40dp"
        android:background="@color/material_dynamic_primary10"
        android:contentDescription="@string/high_score"
        android:fontFamily="@font/atomic_age"
        android:gravity="start|center"
        android:text="@string/high"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:theme="@style/Base.CardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toEndOf="@+id/user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        android:fontFamily="@font/atomic_age"
        android:gravity="start|center"
        android:text="@string/current_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:theme="@style/Base.CardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mole10"
        android:layout_width="221dp"
        android:layout_height="154dp"
        android:onClick="onMoleTen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mole8"
        tools:srcCompat="@sample/withoutMole.png" />

    <ImageView
        android:id="@+id/mole9"
        android:layout_width="179dp"
        android:layout_height="160dp"
        android:onClick="onMoleNine"
        app:layout_constraintEnd_toStartOf="@+id/mole10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mole6"
        tools:srcCompat="@sample/withoutMole.png" />

    <ImageView
        android:id="@+id/mole7"
        android:layout_width="101dp"
        android:layout_height="119dp"
        android:layout_marginEnd="6dp"
        android:onClick="onMoleSeven"
        app:layout_constraintEnd_toStartOf="@+id/mole8"
        app:layout_constraintTop_toBottomOf="@+id/mole5"
        tools:srcCompat="@sample/withoutMole.png" />

    <ImageView
        android:id="@+id/mole6"
        android:layout_width="157dp"
        android:layout_height="126dp"
        android:onClick="onMoleSix"
        app:layout_constraintEnd_toStartOf="@+id/mole7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mole4"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@sample/withoutMole.png" />

    <ImageView
        android:id="@+id/mole8"
        android:layout_width="141dp"
        android:layout_height="125dp"
        android:onClick="onMoleEight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mole5"
        tools:srcCompat="@sample/withoutMole.png" />

    <ImageView
        android:id="@+id/mole3"
        android:layout_width="135dp"
        android:layout_height="127dp"
        android:layout_marginTop="26dp"
        android:onClick="onMoleThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_board"
        tools:srcCompat="@sample/withoutMole.png" />

    <ImageView
        android:id="@+id/mole2"
        android:layout_width="102dp"
        android:layout_height="123dp"
        android:layout_marginTop="31dp"
        android:onClick="onMoleTwo"
        app:layout_constraintEnd_toStartOf="@+id/mole3"
        app:layout_constraintTop_toBottomOf="@+id/score_board"
        tools:srcCompat="@sample/withoutMole.png" />

    <ImageView
        android:id="@+id/mole4"
        android:layout_width="231dp"
        android:layout_height="142dp"
        android:layout_marginTop="4dp"
        android:onClick="onMoleFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mole1"
        tools:srcCompat="@sample/withoutMole.png" />

    <ImageView
        android:id="@+id/mole5"
        android:layout_width="176dp"
        android:layout_height="147dp"
        android:layout_marginTop="4dp"
        android:onClick="onMoleFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mole4"
        app:layout_constraintTop_toBottomOf="@+id/mole3"
        tools:srcCompat="@sample/withoutMole.png" />

    <TextView
        android:id="@+id/score_board"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:fontFamily="@font/atomic_age"
        android:gravity="start|center"
        android:text="@string/default_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:theme="@style/Base.CardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <ImageView
        android:id="@+id/mole1"
        android:layout_width="171dp"
        android:layout_height="122dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="3dp"
        android:onClick="onMoleOne"
        app:layout_constraintEnd_toStartOf="@+id/mole2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_board"
        tools:srcCompat="@sample/withoutMole.png" />

</androidx.constraintlayout.widget.ConstraintLayout>